# SpaceLoader

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  common.h  commonUtil.h  constants.h  path.h  version.h
.github/workflows/: Ubuntu_CI.yml  Ubuntu_Linux_CI.yml  Windows3.yml  Windows4_CI.yml  Windows_CI.yml  Windows_CI2.yml  Windows_CI_2.yml  Windows_CI_3.yml  Windows_CI_4.yml  ci.yml  coverage.yml  define.yaml  version.yaml  version.yml
Apis/: JavaApi.java  PythonApi.py
Client_console/: CMakeLists.txt  ClientConsole.cpp  ClientConsole.h  client.cpp  client.h  main.cpp
Client_gui/: CMakeLists.txt  backend.cpp  backend.h  backendOperations.cpp  backendOperations.h  client.cpp  client.h  egse.cpp  egse.h  listener.cpp  listener.h  main.cpp  qml.qrc
Client_gui/Scoc3/: pinClass.h  treeNode.h
Client_gui/assets/videos/: earth.avi
Client_gui/qml/: main.qml  splashScreen.qml
Client_gui/qml/components/: CircularProgressBar.qml  CustomAppButton.qml  CustomButton.qml  CustomCircularButton.qml  CustomConnectItem.qml  CustomProgressBar.qml  CustomTextField.qml  CustomToggleButton.qml  CustomToolTip.qml  CustomUserListItem.qml  LeftButton.qml  LogButton.qml  TopBarButton.qml  UserTargetMachine.qml
Client_gui/qml/components/Scoc3/: confRWCombo.qml  confRWText.qml  confWCombo.qml  confWText.qml  field.qml  module.qml  pinButton.qml  register.qml  registerTab.qml
Client_gui/qml/pages/: 404.qml  cli.qml  debug.qml  egse.qml  homePage.qml  image.qml  listen.qml  listeners.qml  logs.qml  pageNoInternet.qml  registerViewer.qml  registerViewer.qml.autosave  transfer.qml  transfer2.qml  users.qml
Commands/: CMakeLists.txt  PluginInterface.h  cmd_plugin_interface.h  commandsCommon.h
Commands/Server/addUser/: AddUser.h  CMakeLists.txt  main.cpp
Commands/Server/common/: serverCommon.h  user.h
Commands/Server/getUserList/: CMakeLists.txt  GetUserList.h  main.cpp
Commands/addUser/: CMakeLists.txt  addUser.cpp  addUser.h  test-plugin.cpp  test-plugin.h
Commands/common/: cmd_common.h  cmd_plugin_interface.h  command_interface.h  commandsCommon.h  serverCommon.h  server_common.h  test_plugin_interface.h
Commands/getUserList/: CMakeLists.txt  getUserList.cpp  getUserList.h  test-plugin.cpp  test-plugin.h
Commands/hello/: CMakeLists.txt  hello.cpp  hello.h
Common/: CommonClient.cpp  CommonClient.h  CommonClientServer.cpp  CommonClientServer.h
Common/Cmd/: AuthCmd.h  BaseCmd.h  CallCmd.h  InternalCmd.h
Operations/: Operations.cpp  Operations.h
Operations/Cmd/: AuthCmd.h  BaseCmd.h  CallCmd.h  FileTransferCmd.h  InternalCmd.h  TriggerCmd.h
Server/: CMakeLists.txt  logging.cpp  logging.h  main.cpp  server.cpp  server.h
Server/User/: user.cpp  user.h  userOperations.cpp  userOperations.h
Setup/: ClientCmds.yaml  Config.yaml  Paths.yaml  ServerCmds.yaml
Setup/SetupXml/: ClientCmds.xml  Config.xml  Paths.xml  ServerCmds.xml
lib/Logger/: logger.cpp  logger.h
lib/SSH/: ssh.cpp  ssh.h
lib/TCP/: README.md
lib/TCP/client/: tcpClient.cpp  tcpClient.h
lib/TCP/server/: tcpServer.cpp  tcpServer.h
lib/XML/: xml.cpp  xml.h
lib/YAML/: yaml.cpp  yaml.h
scripts/: build.bat  build.sh  clean.bat  clean.sh  gdb.bat  hello.bat  hello.sh  kill.bat  kill.sh  run client test.bat  run client.bat  run gui.bat  run server.bat
tests/: CMakeLists.txt  Test_common.h
tests/Commands/: test_commands.cpp
tests/Logger/: CMakeLists.txt  test_logger.cpp
tests/Scripts/: test_scripts.cpp
tests/TCP/: CMakeLists.txt  tcp_UnitTests.h  testClient.cpp  testClient.h  testServer.cpp  testServer.h  test_tcp.cpp
tests/XML/: CMakeLists.txt  Test.xml  test_xml.cpp
tests/YAML/: Test.yaml  test_yaml.cpp
